Add action section with preview button and image

--- a/style.css/portfolio.css
+++ b/style.css/portfolio.css
@@ -126,3 +126,30 @@ header {
   font-size: 20px;
   color: rgba(0, 0, 0, 50);
 }
+/* user-reviews section */
+.user-reviews {
+  height: 342px;
+  margin: 137px 150px;
+  text-align: center;
+}
+
+.user-title {
+  font-size: 42px;
+  font-weight: bold;
+  color: #252432;
+  margin-bottom: 50px;
+}
+
+.reviews-box {
+  display: flex;
+  justify-content: space-between;
+}
+
+.review {
+  width: 420px;
+  height: 243px;
+  background-color: rgb(255, 249, 238);
+  border-radius: 14px;
+  text-align: left;
+  padding: 24px;
+}
