--- a/style.css/portfolio.css
+++ b/style.css/portfolio.css
@@ -153,3 +153,38 @@ header {
   text-align: left;
   padding: 24px;
 }
+.review-star {
+  background-image: url(../B12A01-landing-launchpad/Assets/icon-star.png);
+  background-repeat: repeat-x;
+  width: 90px;
+  margin: 30px 0;
+}
+
+.review-message {
+  margin: 30px 0;
+  font-size: 14px;
+}
+.reviewer-details {
+  display: flex;
+}
+
+.reviewer-img {
+  border-radius: 9999px;
+  height: 40px;
+  width: 40px;
+  margin-right: 20px;
+}
+
+/* get-started-banner-section */
+.get-started-banner {
+  background-color: rgb(255, 249, 238);
+  text-align: center;
+  margin: 40px 150px 70px 150px;
+  border-radius: 14px;
+}
+
+.get-started-banner-title {
+  font-size: 50px;
+  font-weight: bold;
+  padding-top: 70px;
+}
